<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tlo_aplikacja"
    tools:context=".Logowanie">

    <TextView

        android:id="@+id/powitanie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="246dp"
        android:fontFamily="monospace"
        android:text="@string/powitanie"
        android:textSize="20sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nazwa_aplikacji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:elegantTextHeight="true"
        android:fontFamily="casual"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/powitanie" />

    <EditText
        android:id="@+id/Email_Logowanie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        android:background="@color/tlo_polaTekstowe"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/nazwa_aplikacji"
        app:layout_constraintStart_toStartOf="@+id/nazwa_aplikacji"
        app:layout_constraintTop_toBottomOf="@+id/nazwa_aplikacji" />

    <EditText
        android:id="@+id/Haslo_Logowanie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/haslo"
        android:inputType="textPassword"
        android:textSize="24sp"
        android:background="@color/tlo_polaTekstowe"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/Email_Logowanie"
        app:layout_constraintStart_toStartOf="@+id/Email_Logowanie"
        app:layout_constraintTop_toBottomOf="@+id/Email_Logowanie" />

    <Button
        android:id="@+id/zaloguj_Logowanie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/tlo_przycisk"
        android:fontFamily="serif"
        android:text="@string/zaloguj"
        android:textSize="24sp"
        android:textStyle="bold"
        android:onClick="logowanie"
        app:layout_constraintEnd_toEndOf="@+id/Haslo_Logowanie"
        app:layout_constraintStart_toStartOf="@+id/Haslo_Logowanie"
        app:layout_constraintTop_toBottomOf="@+id/Haslo_Logowanie" />

    <Button
        android:id="@+id/zarejestruj_Logowanie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/tlo_przycisk"
        android:fontFamily="serif"
        android:text="@string/rejestracja"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/zaloguj_Logowanie"
        app:layout_constraintStart_toStartOf="@+id/zaloguj_Logowanie"
        app:layout_constraintTop_toBottomOf="@+id/zaloguj_Logowanie" />
</androidx.constraintlayout.widget.ConstraintLayout>